2017.12/_sources/plugins/available/emperor/index.txt
emperor
=======

.. raw:: html

   <table class="table plugin-info">
     <tbody>
       <tr>
         <th scope="row">Description</th>
         <td>
           
           This QIIME 2 plugin wraps Emperor and supports interactive visualization of ordination plots.<br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Version</th>
         <td>2017.12.0</td>
       </tr>
       <tr>
         <th scope="row">Website</th>
         <td><a href="http://emperor.microbio.me" rel="noopener">http://emperor.microbio.me</a></td>
       </tr>
       <tr>
         <th scope="row">Support</th>
         <td>
           
           Please post to the QIIME 2 forum for help with this plugin: <a href="https://forum.qiime2.org" rel="noopener">https://forum.qiime2.org</a><br/>
           
         </td>
       </tr>
       <tr>
         <th scope="row">Citation</th>
         <td>
           
           EMPeror: a tool for visualizing high-throughput microbial community data.<br/>
           
           Vazquez-Baeza Y, Pirrung M, Gonzalez A, Knight R.<br/>
           
           Gigascience. 2013 Nov 26;2(1):16.<br/>
           
           Bringing the Dynamic Microbiome to Life with Animations.<br/>
           
           Vazquez-Baeza Y, Gonzalez A, Smarr L, McDonald D, Morton J, Navas-Molina J, Knight R.<br/>
           
           Cell Host &amp; Microbe.Volume 21, Issue 1, p7–10, 11 January 2017.<br/>
           
         </td>
       </tr>
     </tbody>
   </table>






Visualizers
-----------

.. toctree::
   :maxdepth: 1

   
   plot
   
